# minisat

./: CMakeLists.txt  minisatConfig.cmake.in
